<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.StartActivity"
    android:background="@color/backgroundStart">

    <TextView
        android:id="@+id/TV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_bored"
        android:textColor="@color/purple_500"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />


    <TextView
        android:id="@+id/TV_participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="25dp"
        android:text="@string/participants"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_title" />

    <EditText
        android:id="@+id/ET_NumParticipants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="4dp"
        android:inputType="number"
        android:textSize="25sp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@+id/TV_title"
        app:layout_constraintTop_toBottomOf="@+id/TV_participants" />

    <Button
        android:id="@+id/btnstart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="25dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_NumParticipants" />

    <TextView
        android:id="@+id/TV_termsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/terms_and_conditions"
        app:layout_constraintEnd_toEndOf="@+id/btnstart"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/btnstart"
        app:layout_constraintTop_toBottomOf="@+id/btnstart" />

</androidx.constraintlayout.widget.ConstraintLayout>