<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.InitialActivity"
    android:background="@color/backgroundStart">

    <TextView
        android:id="@+id/TextView5"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="200dp"
        android:text="@string/price_range"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_title" />

    <TextView
        android:id="@+id/TV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_bored"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/title_initial"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        tools:ignore="TextContrastCheck" />


    <TextView
        android:id="@+id/TV_participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="30dp"
        android:text="@string/participants"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_title" />

    <EditText
        android:id="@+id/ET_NumParticipants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_participants"
        app:layout_constraintVertical_bias="0.003"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnstart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="30dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_NumParticipants"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/TV_termsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/terms_and_conditions"
        app:layout_constraintEnd_toEndOf="@+id/btnstart"
        app:layout_constraintStart_toStartOf="@+id/btnstart"
        app:layout_constraintTop_toBottomOf="@+id/btnstart"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/ch_term_and_con"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/TV_termsAndConditions"
        app:layout_constraintEnd_toStartOf="@+id/TV_termsAndConditions"
        app:layout_constraintTop_toTopOf="@+id/TV_termsAndConditions"
        app:layout_constraintVertical_bias="0.50" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/SBPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:max="1"
        android:min="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView5"
        app:layout_constraintVertical_bias="0.036"
        app:values="@array/initial_range_slider_values"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>